Small fix for top-nav-fixed z-index

--- a/_styles/modules/_navigation.sass
+++ b/_styles/modules/_navigation.sass
@@ -51,6 +51,7 @@
 
 .top-nav-fixed
 	position: fixed
+	z-index: 2
 
 	.site-nav
 		background-color: rgba($color-bkg, 0.83)
